# zips-language

./: .gitignore  CMakeLists.txt  README.md  example.zps
src/: ast.h  error.cpp  error.h  lexer.h  lexer.l  main.cpp  parser.y  type.h  typeCheck.cpp  typeCheck.h
src/codegen/: codegen.h
